modify .gitignore file .
because hard to see while run "git status"

Changes to be committed:
	modified:   .gitignore
	modified:   build-browser.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 bin/
+lib/
 *.pyc
 *.swp
 *.swo
@@ -7,3 +8,37 @@ bin/
 
 CMakeFiles/
 .tmp_cpu_num
+*.cmake
+*.gmo
+CMakeCache.txt
+DerivedSources/
+JavaScriptCore-4.0.gir
+JavaScriptCore-4.0.typelib
+Makefile
+Source/BrowserApp/Makefile
+Source/Chromium/Makefile
+Source/JavaScriptCore/Makefile
+Source/JavaScriptCore/javascriptcoregtk-4.0.pc
+Source/JavaScriptCore/shell/Makefile
+Source/Makefile
+Source/WTF/Makefile
+Source/WTF/wtf/Makefile
+Source/WebCore/Makefile
+Source/WebCore/platform/gtk/po/Makefile
+Source/WebCore/platform/gtk/po/POTFILES
+Source/WebCore/platform/gtk/po/WebKit2GTK-4.0.pot
+Source/WebKit2/Makefile
+Source/WebKit2/webkit2gtk-4.0.pc
+Source/WebKit2/webkit2gtk-web-extension-4.0.pc
+Source/cmake/gtest/Makefile
+Tools/Makefile
+WebKit2-4.0.gir
+WebKit2-4.0.typelib
+WebKit2-forwarding-headers.stamp
+WebKit2WebExtension-4.0.gir
+WebKit2WebExtension-4.0.typelib
+build.sh
+cmakeconfig.h
+gtkdoc-webkit2gtk.cfg
+gtkdoc-webkitdom.cfg
+
