ZRL modify cmake file & build-browser.sh to support building midori

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -24,6 +24,10 @@ endif ()
 # ZRL add a new module path from chromium source codes
 add_subdirectory(Chromium)
 add_subdirectory(BrowserApp) #browser app dir
+if (ENABLE_MIDORI)
+    message(STATUS "Build midori App...............")
+    add_subdirectory(midori) #browser app dir
+endif()
 
 WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS()
 
