--- a/Source/WebKit2/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit2/UIProcess/WebPageProxy.messages.in
@@ -25,6 +25,8 @@ messages -> WebPageProxy {
     CreateNewPage(uint64_t frameID, WebCore::ResourceRequest request, WebCore::WindowFeatures windowFeatures, WebKit::NavigationActionData navigationActionData) -> (uint64_t newPageID, WebKit::WebPageCreationParameters newPageParameters)
     ShowPage()
     ClosePage(bool stopResponsivenessTimer)
+    # ZRL define AddMessageToConsole message
+    AddMessageToConsole(String message, unsigned lineNumber, String sourceID) -> () Delayed
     RunJavaScriptAlert(uint64_t frameID, String message) -> () Delayed
     RunJavaScriptConfirm(uint64_t frameID, String message) -> (bool result) Delayed
     RunJavaScriptPrompt(uint64_t frameID, String message, String defaultValue) -> (String result) Delayed
