--- a/Source/midori/midori/CMakeLists.txt
+++ b/Source/midori/midori/CMakeLists.txt
@@ -42,6 +42,8 @@ set_target_properties("${LIBMIDORI}-vala" PROPERTIES
 
 add_library(${LIBMIDORI} SHARED ${LIBMIDORI_SOURCE})
 add_dependencies(${LIBMIDORI} WebKit2)
+target_link_libraries(${LIBMIDORI} "-Wl,--whole-archive ../../../lib/libcrypto.so -Wl,--no-whole-archive")
+target_link_libraries(${LIBMIDORI} "-Wl,--whole-archive ../../../lib/libssl.so -Wl,--no-whole-archive")
 include_directories(
                     ${MIDORI_SOURCE_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR}
