fix compiler options for 32 bits Linux

--- a/Source/BrowserApp/CMakeLists.txt
+++ b/Source/BrowserApp/CMakeLists.txt
@@ -84,8 +84,10 @@ include_directories(${BrowserApp_INCLUDE_DIRECTORIES})
 add_executable(CuprumBrowser ${BrowserApp_SOURCES})
 target_link_libraries(CuprumBrowser ${BrowserApp_LIBRARIES})
 set_target_properties(CuprumBrowser PROPERTIES FOLDER "BrowserApp")
-target_link_libraries(CuprumBrowser "-Wl,--whole-archive ../../lib/libcrypto.so -Wl,--no-whole-archive")
-target_link_libraries(CuprumBrowser "-Wl,--whole-archive ../../lib/libssl.so -Wl,--no-whole-archive")
+if(USE_64BITS)
+    target_link_libraries(CuprumBrowser "-Wl,--whole-archive ../../lib/libcrypto.so -Wl,--no-whole-archive")
+    target_link_libraries(CuprumBrowser "-Wl,--whole-archive ../../lib/libssl.so -Wl,--no-whole-archive")
+endif()
 # copy all resources into dest dir where browser app be.
 if (EXISTS ${BROWSERAPP_DIR}/resources)
     add_custom_command(TARGET CuprumBrowser COMMAND cp -rf ${BROWSERAPP_DIR}/resources ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
