--- a/Source/WebKit2/CMakeLists.txt
+++ b/Source/WebKit2/CMakeLists.txt
@@ -703,8 +703,13 @@ set_target_properties(WebKit2 PROPERTIES FOLDER "WebKit")
 set_target_properties(WebKit2 PROPERTIES LINK_FLAGS "-fPIC")
 
 # add OpenSSL libs by luyue
-target_link_libraries(WebKit2 "-Wl,--whole-archive ../../lib/libcrypto.so -Wl,--no-whole-archive")
-target_link_libraries(WebKit2 "-Wl,--whole-archive ../../lib/libssl.so -Wl,--no-whole-archive")
+if(USE_64BITS)
+    target_link_libraries(WebKit2 "-Wl,--whole-archive ../../lib/libcrypto.so -Wl,--no-whole-archive")
+    target_link_libraries(WebKit2 "-Wl,--whole-archive ../../lib/libssl.so -Wl,--no-whole-archive")
+else()
+    target_link_libraries(WebKit2 "-Wl,--whole-archive ../../lib/libcrypto.a -Wl,--no-whole-archive")
+    target_link_libraries(WebKit2 "-Wl,--whole-archive ../../lib/libssl.a -Wl,--no-whole-archive")
+endif()
 
 if (WebKit2_VERSION_SCRIPT)
     ADD_TARGET_PROPERTIES(WebKit2 LINK_FLAGS "${WebKit2_VERSION_SCRIPT}")
