--- a/Source/midori/midori/CMakeLists.txt
+++ b/Source/midori/midori/CMakeLists.txt
@@ -6,7 +6,7 @@ set(LIBMIDORI_SOVERSION 0)
 set(MIDORI_SOURCE_DIR "${CMAKE_SOURCE_DIR}/Source/midori")
 
 file(GLOB MIDORI_VALA_SOURCE ../katze/*.vala *.vala ../panels/*.vala)
-file(GLOB LIBMIDORI_SOURCE ../katze/*.c ../panels/*.c ../toolbars/*.c ../settings/*.c midori-*.vala midori-*.c sokoke.c Certificate.c)
+file(GLOB LIBMIDORI_SOURCE ../katze/*.c ../panels/*.c ../toolbars/*.c  midori-*.vala midori-*.c sokoke.c Certificate.c ../settings/*.c)
 include(GLibHelpers)
 add_glib_marshal(LIBMIDORI_SOURCE marshal ${MIDORI_PROJECT_NAME}_cclosure_marshal "midori.h")
 set(MIDORI_SOURCE
