--- a/Source/BrowserApp/icons/CMakeLists.txt
+++ b/Source/BrowserApp/icons/CMakeLists.txt
@@ -8,5 +8,7 @@ endmacro()
 foreach(SIZE 16x16 22x22 32x32 128x128 256x256)
     install_icon(${MIDORI_PROJECT_NAME} apps ${SIZE})
     install_icon(extension categories ${SIZE})
+    install_icon(bookmarked categories ${SIZE})
+    install_icon(unbookmark categories ${SIZE})
 endforeach()
 
