--- a/Source/BrowserApp/data/cdosbrowser-private.desktop.in
+++ b/Source/BrowserApp/data/cdosbrowser-private.desktop.in
@@ -1,7 +1,8 @@
 [Desktop Entry]
-Version=1.0
+Version=0.2
 Type=Application
 _Name=CDOS Private Browsing
+Name[zh_CN]=启动隐私浏览模式
 _GenericName=Private Browsing
 _Comment=Open a new private browsing window
 Categories=GTK;Network;WebBrowser;
