--- a/Source/BrowserApp/data/cdosbrowser.desktop.in
+++ b/Source/BrowserApp/data/cdosbrowser.desktop.in
@@ -1,12 +1,14 @@
 [Desktop Entry]
-Version=1.0
+Version=0.2
 Type=Application
 _Name=CDOS Browser
+Name[zh_CN]=CDOS网络浏览器
 _GenericName=Web Browser
 _X-GNOME-Fullname=CDOS Web Browser
 _Comment=Browse the Web
 _X-GNOME-Keywords=Internet;WWW;Explorer
 _X-AppInstall-Keywords=Internet;WWW;Explorer
+Comment[zh_CN]=访问互联网
 Categories=GTK;Network;WebBrowser;
 MimeType=text/html;application/xhtml+xml;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/geo;image/svg+xml;
 Exec=cdosbrowser %U
@@ -23,9 +25,11 @@ Exec=cdosbrowser -e TabNew
 
 [Desktop Action WindowNew]
 _Name=New Window
+Name[zh_CN]=新建窗口
 Exec=cdosbrowser -e WindowNew
 
 [Desktop Action Private]
 _Name=New Private Browsing Window
+Name[zh_CN]=新建隐私浏览窗口
 Exec=cdosbrowser --private
 
