--- a/Source/JavaScriptCore/CMakeLists.txt
+++ b/Source/JavaScriptCore/CMakeLists.txt
@@ -1106,7 +1106,8 @@ endif ()
 if (${JavaScriptCore_LIBRARY_TYPE} STREQUAL "SHARED")
     POPULATE_LIBRARY_VERSION(JAVASCRIPTCORE)
     set_target_properties(JavaScriptCore PROPERTIES VERSION ${JAVASCRIPTCORE_VERSION} SOVERSION ${JAVASCRIPTCORE_VERSION_MAJOR})
-    install(TARGETS JavaScriptCore DESTINATION "${LIB_INSTALL_DIR}")
+#    install(TARGETS JavaScriptCore DESTINATION "${LIB_INSTALL_DIR}")
+    install(TARGETS JavaScriptCore DESTINATION "${BROWSER_LIB_INSTALL_DIR}")
 endif ()
 
 if (ENABLE_FTL_JIT)
