--- a/Source/WebKit2/CMakeLists.txt
+++ b/Source/WebKit2/CMakeLists.txt
@@ -701,6 +701,7 @@ add_webkit2_prefix_header(WebKit2)
 target_link_libraries(WebKit2 ${WebKit2_LIBRARIES})
 set_target_properties(WebKit2 PROPERTIES FOLDER "WebKit")
 set_target_properties(WebKit2 PROPERTIES LINK_FLAGS "-fPIC")
+set_target_properties(WebKit2 PROPERTIES INSTALL_RPATH "${BROWSER_LIB_INSTALL_DIR}")
 
 # add OpenSSL libs by luyue
 if(USE_64BITS)
@@ -723,6 +724,7 @@ add_executable(WebProcess ${WebProcess_SOURCES})
 add_webkit2_prefix_header(WebProcess)
 target_link_libraries(WebProcess ${WebProcess_LIBRARIES})
 set_target_properties(WebProcess PROPERTIES FOLDER "WebKit")
+set_target_properties(WebProcess PROPERTIES INSTALL_RPATH "${BROWSER_LIB_INSTALL_DIR}")
 
 if (WebKit2_WebProcess_OUTPUT_NAME)
     set_target_properties(WebProcess PROPERTIES OUTPUT_NAME ${WebKit2_WebProcess_OUTPUT_NAME})
@@ -733,6 +735,7 @@ if (ENABLE_NETWORK_PROCESS)
     add_webkit2_prefix_header(NetworkProcess)
     target_link_libraries(NetworkProcess ${NetworkProcess_LIBRARIES})
     set_target_properties(NetworkProcess PROPERTIES FOLDER "WebKit")
+    set_target_properties(NetworkProcess PROPERTIES INSTALL_RPATH "${BROWSER_LIB_INSTALL_DIR}")
     install(TARGETS NetworkProcess DESTINATION "${LIBEXEC_INSTALL_DIR}")
 
     if (WebKit2_NetworkProcess_OUTPUT_NAME)
@@ -746,6 +749,7 @@ if (ENABLE_PLUGIN_PROCESS)
     add_webkit2_prefix_header(PluginProcess)
     target_link_libraries(PluginProcess ${PluginProcess_LIBRARIES})
     set_target_properties(PluginProcess PROPERTIES FOLDER "WebKit")
+    set_target_properties(PluginProcess PROPERTIES INSTALL_RPATH "${BROWSER_LIB_INSTALL_DIR}")
     install(TARGETS PluginProcess DESTINATION "${LIBEXEC_INSTALL_DIR}")
 
     if (WebKit2_PluginProcess_OUTPUT_NAME)
@@ -756,5 +760,6 @@ endif ()
 POPULATE_LIBRARY_VERSION(WEBKIT2)
 set_target_properties(WebKit2 PROPERTIES VERSION ${WEBKIT2_VERSION} SOVERSION ${WEBKIT2_VERSION_MAJOR})
 
-install(TARGETS WebKit2 DESTINATION "${LIB_INSTALL_DIR}")
+#install(TARGETS WebKit2 DESTINATION "${LIB_INSTALL_DIR}")
+install(TARGETS WebKit2 DESTINATION "${BROWSER_LIB_INSTALL_DIR}")
 install(TARGETS WebProcess DESTINATION "${LIBEXEC_INSTALL_DIR}")
