--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
-Source: cuprumbrowser
+Source: cdosbrowser
 Section: web
 Priority: extra
-Maintainer: ZhangRuili <zhangrl_os@sari.ac.cn>
+Maintainer: cdosrepobuild <cdosrepobuild@iscas.ac.cn>
 Build-Depends: debhelper (>= 8.0.0),
 	autoconf,
 	automake,
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 8.0.0),
 	gawk,
 	gnome-common,
 	gperf,
-	gtk-doc-tools,
+#	gtk-doc-tools,
 	intltool,
 	itstool,
 	libatk1.0-dev,
@@ -60,7 +60,7 @@ Build-Depends: debhelper (>= 8.0.0),
 #	libgpg-error-dev,
 	libp11-kit-dev,
 	libpciaccess-dev,
-	libtiff5-dev,
+#	libtiff5-dev,
 	libffi-dev,
 	libxcb-xfixes0-dev,
 	libxfont-dev,
@@ -92,13 +92,18 @@ Build-Depends: debhelper (>= 8.0.0),
 	libgstreamer-plugins-good1.0-dev,
 	libgstreamer-plugins-good1.0-0,
 	libgstreamer-plugins-bad1.0-0,
-	libgstreamer-plugins-base1.0-dev
+	libgstreamer-plugins-base1.0-dev,
+	valac-0.20,
+	librsvg2-bin,
+	libgcr-3-dev,
+	libnotify-dev,
+	libsoup-gnome2.4-dev (>=2.27.90)
 Standards-Version: 0.2
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Git: git://git.debian.org/collab-maint/zrltest.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/zrltest.git;a=summary
 
-Package:cuprumbrowser
+Package:cdosbrowser
 Version:0.2
 Section:web
 Architecture:i386
@@ -107,12 +112,12 @@ Depends:libgtk-3-0(>=3.6.4),
 	libglib2.0-0(>=2.36.0),
 	libcairo2(>=1.12.8),
 	libsoup2.4-1(>=2.43.90),
-	libicu48,libglib2.0-0(>=2.36.0),
+	libglib2.0-0(>=2.36.0),
 	glib-networking(>=2.33.2),
 	libffi6,
 	libatk1.0-0,
 	libgdk-pixbuf2.0-0(>=2.26.5)
-Maintainer:ZhangRuili[zhangrl_os@sari.ac.cn]
-Description: CuprumBrowser
+Maintainer:cdosrepobuild <cdosrepobuild@iscas.ac.cn>
+Description: CDOS Security Browser
   This package contains the cuprum browser based on WebKit
 
