ZLF 修复ｐａｎｅｌ画面启动错误警告

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,99 @@ build.sh
 cmakeconfig.h
 gtkdoc-webkit2gtk.cfg
 gtkdoc-webkitdom.cfg
-
+CPackConfig.cmake
+CPackSourceConfig.cmake
+CTestTestfile.cmake
+Source/BrowserApp/CTestTestfile.cmake
+Source/BrowserApp/cmake_install.cmake
+Source/BrowserApp/config/CTestTestfile.cmake
+Source/BrowserApp/config/cmake_install.cmake
+Source/BrowserApp/data/CTestTestfile.cmake
+Source/BrowserApp/data/adblock/blocked.png
+Source/BrowserApp/data/adblock/disabled.png
+Source/BrowserApp/data/adblock/enabled.png
+Source/BrowserApp/data/cdosbrowser-private.desktop
+Source/BrowserApp/data/cdosbrowser.desktop
+Source/BrowserApp/data/cmake_install.cmake
+Source/BrowserApp/extensions/CTestTestfile.cmake
+Source/BrowserApp/extensions/about.c
+Source/BrowserApp/extensions/adblock/config.c
+Source/BrowserApp/extensions/adblock/element.c
+Source/BrowserApp/extensions/adblock/extension.c
+Source/BrowserApp/extensions/adblock/filter.c
+Source/BrowserApp/extensions/adblock/keys.c
+Source/BrowserApp/extensions/adblock/options.c
+Source/BrowserApp/extensions/adblock/pattern.c
+Source/BrowserApp/extensions/adblock/subscriptions.c
+Source/BrowserApp/extensions/adblock/updater.c
+Source/BrowserApp/extensions/adblock/whitelist.c
+Source/BrowserApp/extensions/adblock/widgets.c
+Source/BrowserApp/extensions/adblock_valac.stamp
+Source/BrowserApp/extensions/apps.c
+Source/BrowserApp/extensions/builtin-extensions-init.c
+Source/BrowserApp/extensions/cmake_install.cmake
+Source/BrowserApp/extensions/delayed-load.c
+Source/BrowserApp/extensions/flummi.c
+Source/BrowserApp/extensions/generatesoucecode_valac.stamp
+Source/BrowserApp/extensions/open-with.c
+Source/BrowserApp/extensions/tabby.c
+Source/BrowserApp/extensions/transfers.c
+Source/BrowserApp/extensions/transfers.h
+Source/BrowserApp/extensions/transfers_valac.stamp
+Source/BrowserApp/icons/CTestTestfile.cmake
+Source/BrowserApp/icons/cmake_install.cmake
+Source/BrowserApp/midori/CTestTestfile.cmake
+Source/BrowserApp/midori/cdosbrowser-core.h
+Source/BrowserApp/midori/cdosbrowser-core.vapi
+Source/BrowserApp/midori/cdosbrowser_valac.stamp
+Source/BrowserApp/midori/cmake_install.cmake
+Source/BrowserApp/midori/katze-separatoraction.c
+Source/BrowserApp/midori/midori-bookmarksdatabase.c
+Source/BrowserApp/midori/midori-completion.c
+Source/BrowserApp/midori/midori-contextaction.c
+Source/BrowserApp/midori/midori-database.c
+Source/BrowserApp/midori/midori-dialog.c
+Source/BrowserApp/midori/midori-download.c
+Source/BrowserApp/midori/midori-extensions-column.c
+Source/BrowserApp/midori/midori-historycompletion.c
+Source/BrowserApp/midori/midori-historydatabase.c
+Source/BrowserApp/midori/midori-hsts.c
+Source/BrowserApp/midori/midori-notebook.c
+Source/BrowserApp/midori/midori-panedaction.c
+Source/BrowserApp/midori/midori-paths.c
+Source/BrowserApp/midori/midori-searchcompletion.c
+Source/BrowserApp/midori/midori-settings.c
+Source/BrowserApp/midori/midori-speeddial.c
+Source/BrowserApp/midori/midori-tab.c
+Source/BrowserApp/midori/midori-uri.c
+Source/BrowserApp/midori/midori-viewable.c
+Source/BrowserApp/midori/midori-viewcompletion.c
+Source/BrowserApp/po/CTestTestfile.cmake
+Source/BrowserApp/po/cmake_install.cmake
+Source/BrowserApp/web-extension/CTestTestfile.cmake
+Source/BrowserApp/web-extension/cmake_install.cmake
+Source/CTestTestfile.cmake
+Source/Chromium/CTestTestfile.cmake
+Source/Chromium/cmake_install.cmake
+Source/JavaScriptCore/CTestTestfile.cmake
+Source/JavaScriptCore/cmake_install.cmake
+Source/JavaScriptCore/shell/CTestTestfile.cmake
+Source/JavaScriptCore/shell/cmake_install.cmake
+Source/ThirdParty/openssl-1.0.0d/
+Source/WTF/CTestTestfile.cmake
+Source/WTF/cmake_install.cmake
+Source/WTF/wtf/CTestTestfile.cmake
+Source/WTF/wtf/cmake_install.cmake
+Source/WebCore/CTestTestfile.cmake
+Source/WebCore/cmake_install.cmake
+Source/WebCore/platform/gtk/po/CTestTestfile.cmake
+Source/WebCore/platform/gtk/po/cmake_install.cmake
+Source/WebKit2/CTestTestfile.cmake
+Source/WebKit2/cmake_install.cmake
+Source/cmake/gtest/CTestTestfile.cmake
+Source/cmake/gtest/cmake_install.cmake
+Source/cmake_install.cmake
+Tools/CTestTestfile.cmake
+Tools/cmake_install.cmake
+cmake_install.cmake
+install_manifest.txt
