--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ SHELL := /bin/bash
 
 DEB_TAR_SRCDIR := .
 SRC_DIR = $(CURDIR)
-LIB_DIR        := usr/lib/$(DEBIAN_NAME)
+LIB_DIR        := usr/local/lib/$(DEBIAN_NAME)
 BINARY_PACKAGE_COMPRESSION ?= xz
 INSTALL_DIR = $(CURDIR)/debian/tmp/usr/local
 tmp_INSTALL_DIR=/usr/local
@@ -24,12 +24,20 @@ ThirdParty_DIR=$(SRC_DIR)/Source/ThirdParty/
 build: build-stamp
 
 build_thirdparty:
-	cd $(ThirdParty_DIR) && tar -zxvf openssl-1.0.0d.tar.gz && cd $(ThirdParty_DIR)/openssl-1.0.0d && ./config && make && cd $(SRC_DIR) && cp -rf $(ThirdParty_DIR)/openssl-1.0.0d/lib*.a $(SRC_DIR)/lib
+ifeq ($(DEB_BUILD_ARCH_BITS),32)
+	echo "------------Build $(DEB_BUILD_ARCH_BITS) bits" && mkdir -p $(SRC_DIR)/lib && cd $(ThirdParty_DIR) && tar -zxvf openssl-1.0.0d.tar.gz && cd $(ThirdParty_DIR)/openssl-1.0.0d && ./config && make && cd $(SRC_DIR) && cp -rf $(ThirdParty_DIR)/openssl-1.0.0d/lib*.a $(SRC_DIR)/lib
+else
+	echo "------------Build $(DEB_BUILD_ARCH_BITS) bits" && mkdir -p $(SRC_DIR)/lib && cd $(ThirdParty_DIR) && tar -zxvf openssl-1.0.0d.tar.gz && cd $(ThirdParty_DIR)/openssl-1.0.0d && ./config shared && make && cd $(SRC_DIR) && cp $(ThirdParty_DIR)/openssl-1.0.0d/libcrypto.so.1.0.0 $(SRC_DIR)/lib && cp $(ThirdParty_DIR)/openssl-1.0.0d/libssl.so.1.0.0 $(SRC_DIR)/lib
+endif
 
 # cmake config for webkit project
 cmakeconfig:
 	echo "build release version start..." && sleep 3
+ifeq ($(DEB_BUILD_ARCH_BITS),32)
 	cmake -DUSE_32BITS=1 -DPORT=GTK -DDEVELOPER_MODE=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_SKIP_BUILD_RPATH=FALSE -DCMAKE_BUILD_WITH_INSTALL_RPATH=FALSE -DCOMPILE_MODE=OFF
+else
+	cmake -DUSE_64BITS=1 -DPORT=GTK -DDEVELOPER_MODE=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_SKIP_BUILD_RPATH=FALSE -DCMAKE_BUILD_WITH_INSTALL_RPATH=FALSE -DCOMPILE_MODE=OFF
+endif
 
 # Build webkit project.
 build-stamp: build_thirdparty cmakeconfig
@@ -50,6 +58,10 @@ install: build
 	dh_testroot
 	dh_clean -k 
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
+ifeq ($(DEB_BUILD_ARCH_BITS),64)
+	cp -f $(SRC_DIR)/lib/libssl.so.1.0.0 $(INSTALL_DIR)/lib/$(DEBIAN_NAME)/
+	cp -f $(SRC_DIR)/lib/libcrypto.so.1.0.0 $(INSTALL_DIR)/lib/$(DEBIAN_NAME)/
+endif
 
 #	cp -rf $(CURDIR)/bin/resources $(CURDIR)/debian/tmp/usr/local/cuprumtest/bin/
 
