--- a/debian/control
+++ b/debian/control
@@ -98,15 +98,15 @@ Build-Depends: debhelper (>= 8.0.0),
 	libgcr-3-dev,
 	libnotify-dev,
 	libsoup-gnome2.4-dev (>=2.27.90)
-Standards-Version: 0.2
+Standards-Version: 0.0.2
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Git: git://git.debian.org/collab-maint/zrltest.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/zrltest.git;a=summary
 
 Package:cdosbrowser
-Version:0.2
+Version:0.0.2
 Section:web
-Architecture:i386
+Architecture:any
 Pre-Depends: dpkg (>= 1.16.10)
 Depends:libgtk-3-0(>=3.6.4),
 	libglib2.0-0(>=2.36.0),
