lxx fix some error

--- a/Source/WebCore/page/Settings.in
+++ b/Source/WebCore/page/Settings.in
@@ -126,6 +126,7 @@ mediaPlaybackRequiresUserGesture initial=defaultMediaPlaybackRequiresUserGesture
 mediaPlaybackAllowsInline initial=defaultMediaPlaybackAllowsInline
 passwordEchoEnabled initial=false
 suppressesIncrementalRendering initial=false
+doNotTrack initial=true
 incrementalRenderingSuppressionTimeoutInSeconds type=double, initial=defaultIncrementalRenderingSuppressionTimeoutInSeconds
 backspaceKeyNavigationEnabled initial=true
 shouldDisplaySubtitles initial=false, conditional=VIDEO_TRACK
