--- a/Source/BrowserApp/icons/CMakeLists.txt
+++ b/Source/BrowserApp/icons/CMakeLists.txt
@@ -14,5 +14,8 @@ foreach(SIZE 16x16 22x22 32x32 128x128 256x256)
     install_icon(authensite categories ${SIZE})
     install_icon(certifiedwebsite categories ${SIZE})
     install_icon(user-bookmarks-custom categories ${SIZE})
+#lxx, 20150202
+    install_icon(allowed_location categories ${SIZE})
+    install_icon(blocked_location categories ${SIZE})
 endforeach()
 
