ZRL 解决晓旭上传代码编译不过问题

--- a/Source/WebKit2/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit2/UIProcess/WebPageProxy.messages.in
@@ -416,4 +416,7 @@ messages -> WebPageProxy {
 #if ENABLE(CONTENT_FILTERING)
     ContentFilterDidBlockLoadForFrame(WebCore::ContentFilter contentFilter, uint64_t frameID)
 #endif
+
+    //ZRL define this
+    IsJavascriptPopupWindowIntercepted(String str) -> ()
 }
